jasn/examples/invalid/uppercase_null.jasn
/* Uppercase NULL (should be lowercase) */
{
  bad: NULL
}
